# dap

./: .env.example  .gitignore  pyproject.toml
examples/: hello_agent.py  litellm_agent.py  loop_demo.py  sandbox_demo.py  trace.jsonl
src/dap/: __init__.py
src/dap/constraints/: base.py  registry.py
src/dap/constraints/builtin/: __init__.py  inject_reminder.py  loop_detector.py  max_tool_calls.py  sandbox.py
src/dap/constraints/builtin/advise/: __init__.py  inject_reminder.py  loop_advisory.py
src/dap/constraints/builtin/enforce/: __init__.py  loop_guard.py  max_tool_calls.py  sandbox.py
src/dap/constraints/builtin/hybrid/: __init__.py
src/dap/llm/: base.py  litellm_provider.py  mock.py
src/dap/runtime/: executor.py  hooks.py  loop.py  tools.py
src/dap/trace/: events.py  writer.py
tests/: test_executor.py  test_litellm_provider.py  test_sandbox_integration.py
