[project]
name = "dap"
version = "0.0.1"
description = "Dynamic agent constraint runtime"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
litellm = ["litellm>=1.50"]
dev = ["pytest>=8", "litellm>=1.50"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dap"]
