[project]
name = "dap"
version = "0.0.1"
description = "Dynamic agent constraint runtime"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
litellm = ["litellm>=1.50", "python-dotenv>=1.0"]
dev = ["pytest>=8", "litellm>=1.50", "python-dotenv>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dap"]
